--- a/start-site/pom.xml
+++ b/start-site/pom.xml
@@ -73,7 +73,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>start-site</finalName>
+		<finalName>start-site-2.7.18</finalName>
 		<plugins>
 			<plugin>
 				<groupId>io.spring.javaformat</groupId>
